--- a/prepros.config
+++ b/prepros.config
@@ -937,6 +937,16 @@
             }
           }
         }
+      },
+      {
+        "file": "scss/styles.scss",
+        "config": {
+          "tasks": {
+            "minify-css": {
+              "enable": true
+            }
+          }
+        }
       }
     ]
   }
